<resources>
    <string name="app_name">Cute Shop</string>
    <string name="titre"> Cute \nShop </string>
    <string name="logo">coccinelle</string>

    <string name="s_inscrire">S\'inscrire</string>
    <string name="connexion_invité">Se connecter en tant qu\'inviter</string>
    <string name="se_connecte">Se connecter</string>
    <string name="valider" >Valider</string>
    <string name="ajout_com">Ajouter un commerçant</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Êtes-vous sûr ?</string>
    <string name="oui" >OUI</string>
    <string name="non" >NON</string>
    <string name="ok" >OK</string>
    <string name="ajout_produit">Ajouter un produit</string>
    <string name="gestion_produit">Gérer mes produits</string>
    <string name="commande">Voir les commandes</string>
    <string name="importer">Importer</string>

    <string name="nom">Nom</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="adresse_email">Adresse email</string>
    <string name="num_tel">Téléphone</string>
    <string name="adresse">Adresse</string>
    <string name="rue">Rue/Avenue</string>
    <string name="mot_de_pass">Mot de passe</string>
    <string name="mdp_confirm">Confirmation du mot de passe</string>
    <string name="num_siret">000 000 000 00000</string>
    <string name="siret">N°siret/siren</string>
    <string name="nom_com">Toto</string>
    <string name="image">Image</string>
    <string name="prix">Prix</string>
    <string name="details_produit">D\étails du produit</string>
    <string name="description">Description</string>
    <string name="nom_produit">Nom du produit</string>
    <string name="offre">Offre</string>
    <string name="disponibilite">Disponibilité</string>

    <string name="bienvenue">Bienvenue</string>
    <string name="bonjour">Bonjour</string>
    <string name="inscription">Pas encore de compte ?</string>
    <string name="nouveau_com">Nouveau Commerçant</string>
    <string name="profil">Profil</string>
    <string name="liste_commercant">Liste de commerçants :</string>
    <string name="tu_souhaites">Tu souhaites ?</string>

    <string name="services">Services</string>
    <string name="animaux">Animaux de compagnie</string>
    <string name="mode">Mode et beauté</string>
    <string name="maison">Maison et bricolage</string>
    <string name="appareil">Appareils &amp; Electronique</string>
    <string name="musique">Musique, vidéo et jeux</string>
    <string name="livre">Livres et lecture</string>
    <string name="jouet">Jouets, enfants et bébé</string>
    <string name="auto">Auto et Moto</string>
    <string name="bureau">Bureau et Professionnel</string>
    <string name="sport">Sport et boutique de fans</string>

    <string name="categorie">Catégorie</string>

    <string name="valid_ajout_commerce">Le commerçant a bien été ajouté !</string>
    <string name="valid_modif_commerce">Le commerçant a bien été modifié !</string>
    <string name="valid_ajout_annonce">L\'annonce a bien \ét\é ajout\ée !</string>
    <string name="valid_modif_annonce">L\'annonce a bien été modifié</string>
    <string name="ville">ville</string>
    <string name="code_postale">code postale</string>
    <string name="commande_recues">Commandes reçues</string>
    <string name="nom_client">Nom du client</string>
    <string name="date">"Date et heure de la reception: \n(DD/MM/YY) ; HH:MM:SS "</string>
    <string name="annuler">Annuler</string>
    <string name="confirmer">Confirmer</string>
    <string name="status">Statut:</string>
    <string name="preparation">En preparation</string>
    <string name="livraison">En livraison</string>
    <string name="termine">Terminé</string>
    <string name="valid_modif_commande">Les commandes ont bien été modifiées.</string>
    <string name="panier">Panier</string>
    <string name="vider">Vider le panier</string>
    <string name="commande_client">Commandes</string>
    <string name="contacter">Contacter le service client</string>
    <string name="valid_panier">La commande a bien été passé</string>
    <string name="error_unknown_error">erreur</string>
    <string name="statut">Statut</string>

</resources>