<?xml version="1.0" encoding="utf-8"?>
<!-- Gestionnaire Ajout Commercant -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gestionnair"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/formulaire_">

    <!-- logo -->
    <View
        android:id="@+id/logo"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="360dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="11dp"
        android:background="@drawable/logo"
        />

    <!-- Nouveau Commerçant -->
    <TextView
        android:id="@+id/nouveau_com"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="34dp"
        android:lineSpacingExtra="5sp"
        android:text="@string/nouveau_com"
        android:textAlignment="center"
        android:textAppearance="@style/titre"
        android:translationY="-2.4sp" />

    <!-- Nom_commercant -->

    <TextView
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nouveau_com"
        android:layout_alignParentStart="true"
        android:layout_marginStart="69dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/frame_16"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="2sp"
        android:text="@string/nom"
        android:textAppearance="@style/label"
        android:translationY="-1sp" />

    <EditText
        android:id="@+id/nom_text"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_below="@+id/nom"
        android:layout_alignParentStart="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="-10dp"
        android:autofillHints="name"
        android:background="@drawable/rectangle_2"
        android:gravity="center"
        android:hint="@string/nom"
        android:inputType="textPersonName"
        android:lineSpacingExtra="3sp"
        android:textColorHint="@color/grey"
        android:textSize="12sp"
        android:translationY="-1.6sp" />


    <!-- Services -->
    <TextView
        android:id="@+id/services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nom_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/frame_16"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="2sp"
        android:text="@string/services"
        android:textAppearance="@style/label"
        android:translationY="-1sp" />

    <!-- animaux -->
    <CheckBox
        android:id="@+id/animaux"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_below="@+id/services"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:lineSpacingExtra="0sp"
        android:text="@string/animaux"
        android:textAppearance="@style/categorie" />

    <!-- mode -->
    <CheckBox
        android:id="@+id/mode"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_below="@+id/animaux"
        android:layout_marginStart="40dp"
        android:background="#00000000"
        android:gravity="center"
        android:lineSpacingExtra="0sp"
        android:text="@string/mode"
        android:textAppearance="@style/categorie" />

    <!-- maison -->
    <CheckBox
        android:id="@+id/maison"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_below="@+id/mode"
        android:layout_marginStart="40dp"
        android:background="#00000000"
        android:gravity="center"
        android:lineSpacingExtra="0sp"
        android:text="@string/maison"
        android:textAppearance="@style/categorie" />

    <!-- appareils -->
    <CheckBox
        android:id="@+id/appareil"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_below="@+id/maison"
        android:layout_marginStart="40dp"
        android:background="#00000000"
        android:gravity="center"
        android:lineSpacingExtra="0sp"
        android:text="@string/appareil"
        android:textAppearance="@style/categorie" />

    <!-- musique -->
    <CheckBox
        android:id="@+id/musique"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_below="@+id/appareil"
        android:layout_marginStart="40dp"
        android:background="#00000000"
        android:lineSpacingExtra="0sp"
        android:text="@string/musique"
        android:textAppearance="@style/categorie" />

    <!-- livre -->
    <CheckBox
        android:id="@+id/livre"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_below="@+id/services"
        android:layout_alignParentStart="true"
        android:layout_marginStart="230dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:lineSpacingExtra="0sp"
        android:text="@string/livre"
        android:textAppearance="@style/categorie" />

    <!-- jouet -->
    <CheckBox
        android:id="@+id/jouet"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_below="@+id/livre"
        android:layout_alignParentStart="true"
        android:layout_marginStart="230dp"
        android:gravity="center"
        android:lineSpacingExtra="0sp"
        android:text="@string/jouet"
        android:textAppearance="@style/categorie" />

    <!-- auto -->
    <CheckBox
        android:id="@+id/auto"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_below="@+id/jouet"
        android:layout_alignParentStart="true"
        android:layout_marginStart="230dp"
        android:gravity="center"
        android:lineSpacingExtra="0sp"
        android:text="@string/auto"
        android:textAppearance="@style/categorie" />

    <!-- bureau -->
    <CheckBox
        android:id="@+id/bureau"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_below="@+id/auto"
        android:layout_alignParentStart="true"
        android:layout_marginStart="230dp"
        android:gravity="center"
        android:lineSpacingExtra="0sp"
        android:text="@string/bureau"
        android:textAppearance="@style/categorie" />

    <!-- sport -->
    <CheckBox
        android:id="@+id/sport"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_below="@+id/bureau"
        android:layout_alignParentStart="true"
        android:layout_marginStart="230dp"
        android:gravity="center"
        android:lineSpacingExtra="0sp"
        android:text="@string/sport"
        android:textAppearance="@style/categorie" />

    <!-- Numéro Siret -->
    <TextView
        android:id="@+id/siret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/musique"
        android:layout_alignParentStart="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/frame_16"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="2sp"
        android:text="@string/siret"
        android:textAppearance="@style/label"
        android:translationY="-1sp" />

    <EditText
        android:id="@+id/num_siret"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_below="@+id/siret"
        android:layout_alignParentStart="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="-8dp"
        android:autofillHints="numero siret"
        android:background="@drawable/rectangle_2"
        android:gravity="center"
        android:hint="@string/num_siret"
        android:inputType="number"
        android:textAppearance="@style/commentaire"
        android:textColorHint="@color/grey" />

    <!-- Email -->
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/num_siret"
        android:layout_alignParentStart="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/frame_16"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="2sp"
        android:text="@string/adresse_email"
        android:textAppearance="@style/label"
        android:translationY="-1sp" />

    <EditText
        android:id="@+id/email_text"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="-5dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rectangle_2"
        android:gravity="center"
        android:hint="@string/adresse_email"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/commentaire"
        android:textColorHint="@color/grey" />

    <!-- Mot de passe -->
    <TextView
        android:id="@+id/mdp"
        android:layout_width="wrap_content"
        android:layout_height="14dp"
        android:layout_below="@+id/email_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/frame_16"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="2sp"
        android:text="@string/mot_de_pass"
        android:textAppearance="@style/label"
        android:translationY="-1sp" />

    <EditText
        android:id="@+id/mdp_text"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_below="@+id/mdp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="-9dp"
        android:autofillHints="password"
        android:background="@drawable/rectangle_2"
        android:gravity="center"
        android:hint="@string/mot_de_pass"
        android:inputType="textPassword"
        android:textColorHint="@color/grey"
        android:textSize="12sp" />

    <!-- S’inscrire -->
    <Button
        android:id="@+id/btn_ajout_commerce"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:layout_below="@+id/mdp_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/rectangle_3"
        android:gravity="center"
        android:text="@string/valider"
        android:textAppearance="@style/btn" />





</RelativeLayout>